--- a/src/ugd_frontend/styles/VirtualBookshelf.css
+++ b/src/ugd_frontend/styles/VirtualBookshelf.css
@@ -1,4 +1,4 @@
-
+/* 
 .🌐🌈 {
   display: flex;
   flex-direction: column;
@@ -116,7 +116,7 @@
   border-radius: 10px;
   background-color: #f2f2f2;
   transition: all 0.5s ease-in-out;
-}
+} */
 
 
 
