--- a/src/ugd_frontend/styles/SemanticLibraryPage.css
+++ b/src/ugd_frontend/styles/SemanticLibraryPage.css
@@ -1,4 +1,4 @@
-.container {
+/* .container {
     position: relative;
     max-width: 1200px;
     margin: 0 auto;
@@ -43,4 +43,4 @@
     align-items: center;
     height: 50vh;
   }
-  
+   */
