--- a/src/ugd_frontend/styles/main.css
+++ b/src/ugd_frontend/styles/main.css
@@ -511,8 +511,14 @@ video {
     max-width: 1536px;
   }
 }
+.absolute {
+  position: absolute;
+}
 .relative {
   position: relative;
+}
+.inset-0 {
+  inset: 0px;
 }
 .left-0 {
   left: 0px;
@@ -557,6 +563,9 @@ video {
 .h-20 {
   height: 5rem;
 }
+.h-full {
+  height: 100%;
+}
 .w-1\/4 {
   width: 25%;
 }
@@ -575,6 +584,9 @@ video {
 .w-screen {
   width: 100vw;
 }
+.flex-1 {
+  flex: 1 1 0%;
+}
 .flex-shrink-0 {
   flex-shrink: 0;
 }
@@ -586,6 +598,9 @@ video {
 }
 .resize {
   resize: both;
+}
+.grid-cols-1 {
+  grid-template-columns: repeat(1, minmax(0, 1fr));
 }
 .flex-col {
   flex-direction: column;
@@ -599,8 +614,17 @@ video {
 .justify-center {
   justify-content: center;
 }
+.justify-between {
+  justify-content: space-between;
+}
+.gap-12 {
+  gap: 3rem;
+}
 .overflow-auto {
   overflow: auto;
+}
+.overflow-hidden {
+  overflow: hidden;
 }
 .overflow-x-auto {
   overflow-x: auto;
@@ -610,8 +634,17 @@ video {
   text-overflow: ellipsis;
   white-space: nowrap;
 }
+.rounded {
+  border-radius: 0.25rem;
+}
 .rounded-full {
   border-radius: 9999px;
+}
+.rounded-lg {
+  border-radius: 0.5rem;
+}
+.border {
+  border-width: 1px;
 }
 .border-4 {
   border-width: 4px;
@@ -622,6 +655,10 @@ video {
 .border-gray-200 {
   --tw-border-opacity: 1;
   border-color: rgb(229 231 235 / var(--tw-border-opacity));
+}
+.bg-\[\#fbfbf5\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(251 251 245 / var(--tw-bg-opacity));
 }
 .bg-blue-500 {
   --tw-bg-opacity: 1;
@@ -649,6 +686,9 @@ video {
 }
 .p-4 {
   padding: 1rem;
+}
+.p-8 {
+  padding: 2rem;
 }
 .px-4 {
   padding-left: 1rem;
@@ -689,10 +729,23 @@ video {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
+.shadow-lg {
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+.shadow-md {
+  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
 .transition-transform {
   transition-property: transform;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
+}
+.duration-1000 {
+  transition-duration: 1000ms;
 }
 .ease-linear {
   transition-timing-function: linear;
@@ -704,4 +757,28 @@ video {
   --tw-scale-x: 1.05;
   --tw-scale-y: 1.05;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+@media (min-width: 640px) {
+
+  .sm\:grid-cols-\[repeat\(auto-fill\2c minmax\(28rem\2c 1fr\)\)\] {
+    grid-template-columns: repeat(auto-fill,minmax(28rem,1fr));
+  }
+}
+@media (min-width: 768px) {
+
+  .md\:grid-cols-\[repeat\(auto-fill\2c minmax\(30rem\2c 1fr\)\)\] {
+    grid-template-columns: repeat(auto-fill,minmax(30rem,1fr));
+  }
+}
+@media (min-width: 1024px) {
+
+  .lg\:grid-cols-\[repeat\(auto-fill\2c minmax\(37\.5rem\2c 1fr\)\)\] {
+    grid-template-columns: repeat(auto-fill,minmax(37.5rem,1fr));
+  }
+}
+@media (min-width: 1280px) {
+
+  .xl\:grid-cols-\[repeat\(auto-fill\2c minmax\(45rem\2c 1fr\)\)\] {
+    grid-template-columns: repeat(auto-fill,minmax(45rem,1fr));
+  }
 }
