--- a/src/ugd_frontend/styles/AuthorCards.css
+++ b/src/ugd_frontend/styles/AuthorCards.css
@@ -29,8 +29,10 @@
 } */
 
 
+
 .author-container {
 display: flex;
+flex-wrap: wrap;
 overflow: visible;
 }
 
@@ -39,8 +41,8 @@ width: auto;
 }
 
 .author-card {
-width: 100%;
-height: 125%;
+width: 120%;
+height: 145%;
 position: relative;
 transform-style: preserve-3d;
 transform: rotateY(0);
@@ -56,7 +58,7 @@ position: absolute;
 width: 100%;
 height: 100%;
 backface-visibility: hidden;
-border: 1px solid #e2e8f0;
+border: 1px solid #252525;
 border-radius: 0.5rem;
 
 }
@@ -123,7 +125,14 @@ transform: translateX(0);
 
 
 
-
+@media (max-width: 768px) {
+  .card-wrapper {
+    min-width: 50px;
+  }
+  .author-card {
+    width: 100%;
+  }
+}
 
 
 
