--- a/src/ugd_frontend/styles/AuthorCards.css
+++ b/src/ugd_frontend/styles/AuthorCards.css
@@ -1,13 +1,3 @@
-.author-container {
-display: flex;
-flex-wrap: wrap;
-overflow: visible;
-}
-
-.author-container.expanded {
-width: auto;
-}
-
 .author-card {
 width: 120%;
 height: 145%;
@@ -17,8 +7,10 @@ transform: rotateY(0);
 transition: transform 0.5s;
 }
 
-body {
-  overflow-x: hidden;
+.author-name {
+  font-family: 'Georgia', cursive;
+  font-size: 18px;
+  font-weight: 500;
 }
 
 
@@ -33,14 +25,15 @@ height: 100%;
 backface-visibility: hidden;
 border: 1px solid #252525;
 border-radius: 0.5rem;
-
+overflow: hidden;
 }
 
 .card-front {
-background: #fbfbf5;
+background: #fbfbf8;
 display: flex;
 flex-direction: column;
 align-items: center;
+box-shadow: 0 4px 8px rgba(255, 255, 255, 0.4);
 }
 
 .card-front:hover {
@@ -49,8 +42,24 @@ box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 
 .card-back {
 transform: rotateY(180deg);
-background: #fff;
+background: #fbfbf8;
+text-align: center;
+padding: 10px;
+overflow-y: auto;
 }
+
+.card-back::-webkit-scrollbar {
+  display: none;
+}
+
+.card-back:-ms-overflow-style {
+  display: none;
+}
+
+.card-back {
+  scrollbar-width: none;
+}
+
 
 .card-wrapper {
 perspective: 1000px;
@@ -61,15 +70,18 @@ height: 150px;
 .image-container {
 height: calc(100% - 25px);
 width: 100%;
-border-top-left-radius: 0.5rem;
-border-top-right-radius: 0.5rem;
+border-bottom: 1.4px solid #252525;
+}
+
+.streamed-description {
+  font-family: 'Times New Roman', cursive;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.2rem;
 }
 
 .text-container {
-height: 15px;
-width: 100%;
-border-bottom-left-radius: 0.2rem;
-border-bottom-right-radius: 0.2rem;
+width: 95%;
 }
 
 .text-container p {
@@ -90,13 +102,6 @@ transform: translateX(0);
     width: 100%;
   }
 }
-
-
-
-
-
-
-
 
 
 
