--- a/src/ugd_frontend/styles/BookCard.css
+++ b/src/ugd_frontend/styles/BookCard.css
@@ -1,5 +1,4 @@
-/* Add this class for the flipping effect */
-.BCCardFlipped .BCBook-card {
+/* .BCCardFlipped .BCBook-card {
     transform: rotateY(180deg);
   }
 
@@ -12,12 +11,6 @@
     transition: transform 0.5s;
 }
 
-.BCAuthor-name {
-    font-family: 'Georgia', cursive;
-    font-size: 18px;
-    font-weight: 500;
-}
-
 .BCCard-face {
     position: absolute;
     width: 100%;
@@ -56,32 +49,13 @@
     scrollbar-width: none;
 }
 
-.BCCard-wrapper {
-    perspective: 1000px;
-    width: 150px;
-    height: 150px;
-    padding: 0px 0px 0px 0px
-}
-
-.BCImage-container {
-    height: calc(100% - 25px);
-    width: 100%;
-    border-bottom: 1.4px solid #252525;
-}
-
-.BCStreamed-description {
-    font-family: 'Times New Roman', cursive;
-    font-size: 1rem;
-    font-weight: 400;
-    line-height: 1.2rem;
-}
 
 .BCText-container {
     width: 95%;
 }
 
 .BCText-container p {
-    white-space: nowrap;
+    white-space: normal;
     overflow: hidden;
     text-overflow: ellipsis;
 }
@@ -96,30 +70,71 @@
 }
 
 
+.BCCard-wrapper {
+    perspective: 1000px;
+    width: 120px;
+    height: 120px;
+    padding: 0px 0px 0px 0px;
+  }
+  
+.BCImage-container {
+height: calc(100% - 20px);
+width: 100%;
+border-bottom: 1.12px solid #252525;
+}
 
-/* 
-ALL OG STUFF
+.BCAuthor-name {
+font-family: 'Georgia', cursive;
+font-size: 14.4px;
+font-weight: 500;
+}
 
+.BCStreamed-description {
+font-family: 'Times New Roman', cursive;
+font-size: 0.8rem;
+font-weight: 400;
+line-height: 0.96rem;
+}
+
+
+.BCTwoLineTitle {
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    max-height: 50px;
+    font-family: 'Georgia', cursive;
+    font-size: 14.4px;
+    font-weight: 500;
+    line-height: 15px;
+  }
+  
+  .BCAuthor-name {
+    white-space: normal;
+    font-family: 'Georgia', cursive;
+    font-size: 14.4px;
+    font-weight: 500;
+    line-height: 15px;
+  }
+   */
+  
+
+
+  
+
+.BCCardFlipped .BCBook-card {
+    transform: rotateY(180deg);
+}
 
 .BCBook-card {
     width: 120%;
-    height: 145%;
+    height: 190%;
     position: relative;
     transform-style: preserve-3d;
     transform: rotateY(0);
     transition: transform 0.5s;
 }
 
-.BCAuthor-name {
-    font-family: 'Georgia', cursive;
-    font-size: 18px;
-    font-weight: 500;
-}
-
-.BCCard-wrapper.BCCardFlipped .BCAuthor-card {
-    transform: rotateY(180deg);
-}
-
 .BCCard-face {
     position: absolute;
     width: 100%;
@@ -158,32 +173,19 @@ ALL OG STUFF
     scrollbar-width: none;
 }
 
-.BCCard-wrapper {
-    perspective: 1000px;
-    width: 150px;
-    height: 150px;
-    padding: 0px 0px 0px 0px
-}
-
-.BCImage-container {
-    height: calc(100% - 25px);
-    width: 100%;
-    border-bottom: 1.4px solid #252525;
-}
-
-.BCStreamed-description {
-    font-family: 'Times New Roman', cursive;
-    font-size: 1rem;
-    font-weight: 400;
-    line-height: 1.2rem;
-}
 
 .BCText-container {
-    width: 95%;
+    width: 100%;
+    height: 100px;
+    overflow: hidden;
+    background: linear-gradient(to bottom, rgba(255,255,255,0) 0%, rgba(128,128,128,1) 100%);
 }
 
+
 .BCText-container p {
-    white-space: nowrap;
+    padding: 15px 5px 15px 5px;
+    position: absolute;
+    white-space: normal;
     overflow: hidden;
     text-overflow: ellipsis;
 }
@@ -195,4 +197,34 @@ ALL OG STUFF
     .BCAuthor-card {
         width: 100%;
     }
-} */
+}
+
+
+.BCCard-wrapper {
+    perspective: 1000px;
+    width: 120px;
+    height: 120px;
+    padding: 0px 0px 0px 0px;
+}
+  
+.BCImage-container {
+height: calc(100% - 20px);
+width: 100%;
+border-bottom: 1.12px solid #252525;
+}
+
+.BCAuthor-name {
+font-family: 'Nunito';
+font-weight: 700;
+white-space: nowrap;
+overflow: hidden;
+text-overflow: ellipsis;
+}
+  
+
+.BCStreamed-description {
+font-family: 'Times New Roman', cursive;
+font-size: 0.8rem;
+font-weight: 400;
+line-height: 0.96rem;
+}
