Read book button set up

--- a/src/ugd_frontend/styles/BookCard.css
+++ b/src/ugd_frontend/styles/BookCard.css
@@ -105,3 +105,26 @@ font-size: 1rem;
 font-weight: 400;
 line-height: 0.96rem;
 }
+
+
+.BCReadBook-button {
+    background-color: #5e5e5e;
+    color: white;
+    padding: 10px 30px; /* Increased padding for better appearance */
+    border: none;
+    border-radius: 5px;
+    font-weight: bold;
+    cursor: pointer;
+    position: absolute;
+    bottom: 10px;
+    left: 50%;
+    transform: translateX(-50%);
+    transition: background-color 0.3s, transform 0.3s;
+    font-size: 0.875rem; /* Reduced font size to fit text in one line */
+    white-space: nowrap; /* Prevents text from breaking into a new line */
+}
+
+.BCReadBook-button:hover {
+    background-color: #252984;
+    transform: translateX(-50%) scale(1.05); /* Slight scale effect on hover */
+}
