Grid's a bit better but still struggling.

--- a/src/ugd_frontend/assets/main.css
+++ b/src/ugd_frontend/assets/main.css
@@ -33,3 +33,21 @@ button[type="submit"] {
 #greeting:empty {
     display: none;
 }
+
+
+
+
+
+
+
+
+
+
+/* .main-grid-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+} */
