--- a/src/ugd_frontend/styles/MessageCard.css
+++ b/src/ugd_frontend/styles/MessageCard.css
@@ -1,17 +1,57 @@
 .message-card {
-  border: 1px solid #e0e0e0;
-  background-color: #e0e0e0;
-  padding: 16px;
+  display: flex;
+  border: 1px solid #d3c2af;
+  background-color: #faf8ef;
+  padding: 12px 20px;
   border-radius: 8px;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  margin-top: 16px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.08);
+  margin-top: 20px;
+  position: relative;
 }
 
 .message-card-query {
-  font-weight: bold;
-  margin-bottom: 8px;
+  font-weight: 600;
+  font-size: 0.95em;
+  margin-bottom: 2px;
+  color: #7a7a7a;
+}
+
+.message-card-query-content {
+  font-size: 1em;
+  font-style: italic;
+  margin-bottom: 6px;
+  color: #555;
+  max-width: 90%;
 }
 
 .message-card-content {
-  margin: 0;
+  line-height: 1.5;
+  font-size: 1em;
+  color: #444;
+  max-width: 90%;
+}
+
+.author-card-container {
+  display: flex;
+  flex-basis: 25%;
+  justify-content: center;
+  align-items: center;
+  padding: 4% 0;
+  border-right: 1px dashed #d3c2af;
+  margin-right: 20px;
+}
+
+.text-container {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+}
+
+.content-divider {
+  width: 85%;
+  border: 0;
+  height: 1px;
+  background-color: #d3c2af;
+  margin: 4px 0;
 }
