--- a/src/ugd_frontend/styles/MessageCard/CardFront.css
+++ b/src/ugd_frontend/styles/MessageCard/CardFront.css
@@ -1,5 +1,27 @@
-.author-card-container {
-  flex-basis: 25%;
+.MC-card-face {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+  border: 1px solid #252525;
+  border-radius: 0.5rem;
+  overflow: hidden;
+}
+
+.MC-card-front {
+  background: #fbfbf8;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  box-shadow: 0 4px 8px rgba(255, 255, 255, 0.4);
+}
+  
+.MC-card-front:hover {
+  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+}
+
+.MC-author-card-container {
+  flex-basis: auto;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -8,38 +30,38 @@
   margin-right: 20px;
 }
 
-.text-container {
+.MC-text-container {
   flex-grow: 1;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
 }
 
-.message-card-query, .message-card-query-content, .message-card-content {
+.MC-message-card-query, .MC-message-card-query-content, .MC-message-card-content {
   max-width: 90%;
 }
 
-.message-card-query {
+.MC-message-card-query {
   font-weight: 600;
   font-size: 0.95em;
   margin-bottom: 2px;
   color: #7a7a7a;
 }
 
-.message-card-query-content {
+.MC-message-card-query-content {
   font-size: 1em;
   font-style: italic;
   margin-bottom: 6px;
   color: #555;
 }
 
-.message-card-content {
+.MC-message-card-content {
   line-height: 1.5;
   font-size: 1em;
   color: #444;
 }
 
-.content-divider {
+.MC-content-divider {
   width: 85%;
   border: 0;
   height: 1px;
@@ -48,7 +70,7 @@
 }
 
 @media (max-width: 767px) {
-  .author-card-container {
+  .MC-author-card-container {
     border-bottom: 1px dashed #d3c2af;
     margin-bottom: 20px;
     flex-basis: 100%;
