--- a/src/ugd_frontend/styles/MessageCard/CardBack.css
+++ b/src/ugd_frontend/styles/MessageCard/CardBack.css
@@ -1,3 +1,23 @@
+.MC-card-face {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+  transform-style: preserve-3d;
+}
+
+.MC-card-back {
+  transform: rotateY(180deg);
+}
+
+
+.MC-book-cards-container {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 80px;
+}
+
 .MC-flip-button {
   padding: 8px 12px;
   margin-top: 12px;
@@ -13,23 +33,14 @@
   background-color: #b5a58f;
 }
 
+.MC-card-back::-webkit-scrollbar {
+  display: none;
+}
+
+.MC-card-back:-ms-overflow-style {
+  display: none;
+}
+
 .MC-card-back {
-  transform: rotateY(180deg);
-  background: #fbfbf8;
-  text-align: center;
-  padding: 10px;
-  overflow-y: auto;
-  }
-  
-  .MC-card-back::-webkit-scrollbar {
-    display: none;
-  }
-  
-  .MC-card-back:-ms-overflow-style {
-    display: none;
-  }
-  
-  .MC-card-back {
-    scrollbar-width: none;
-  }
-  
+  scrollbar-width: none;
+}
