--- a/src/ugd_frontend/styles/MessageCard/MessageCard.css
+++ b/src/ugd_frontend/styles/MessageCard/MessageCard.css
@@ -1,7 +1,5 @@
 .message-card-wrapper {
-  perspective: 1000px;
   width: 100%;
-  height: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -10,7 +8,7 @@
 
 .message-card {
   width: 100%;
-  height: 300px;
+  min-height: 500px;
   position: relative;
   transform-style: preserve-3d;
   transform: rotateY(0);
@@ -32,3 +30,8 @@
     flex-direction: column;
   }
 }
+
+
+
+
+
