--- a/src/ugd_frontend/styles/AuthorCard.css
+++ b/src/ugd_frontend/styles/AuthorCard.css
@@ -25,6 +25,11 @@
     opacity: 1;
   }*/
 }
+
+.inner-div.flipped .back {
+  z-index: 10;
+}
+
 .inner-div:hover .social-icon {
   opacity: 1;
   top: 0;
@@ -32,7 +37,7 @@
 
 .front,
 .back {
-  background-color: #f4ebcb;
+  background-color: #f9f9ee;
   position: relative;
   top: 0;
   left: 0;
@@ -52,7 +57,6 @@
   position: relative;
   height: 150px;
   width: 300px;
-  background: url("https://images.unsplash.com/photo-1511207538754-e8555f2bc187?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=88672068827eaeeab540f584b883cc66&auto=format&fit=crop&w=1164&q=80") no-repeat;
   background-size: cover;
   -webkit-backface-visibility: hidden;
           backface-visibility: hidden;
@@ -61,22 +65,26 @@
   border-top-left-radius: 5px;
 }
 
+.front__icon {
+  position: relative;
+  z-index: 5;
+}
+
+
 .front__face-photo {
   position: absolute;
-  top: -100px;
-  left: 50px;
-  height: 200px;
-  width: 200px;
+  top: -200px;
+  left: 0px;
+  height: 300px;
+  width: 300px;
   margin: 0 auto;
-  border-radius: 50%;
-  border: 5px solid #fff;
-  /* background: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/156905/profile/profile-512.jpg?1530296477") no-repeat; */
-  background-size: contain;
+  border-radius: 5px 5px 0px 0px;
+  border: none;
+  background-size: cover;
   overflow: hidden;
-  /* backface-visibility: hidden;
-   transition: all 0.6s cubic-bezier(0.8, -0.4, 0.2, 1.7);
-   z-index: 3;*/
+  z-index: 3;
 }
+
 
 .front__text {
   position: relative;
@@ -93,6 +101,7 @@
   text-transform: uppercase;
   font-size: 20px;
 } */
+
 .front__text .front__text-para {
   position: relative;
   top: -5px;
@@ -109,6 +118,7 @@
   margin-right: 6px;
   color: gray;
 }
+
 .front__text .front__text-hover {
   position: relative;
   top: 10px;
