--- a/src/ugd_frontend/assets/main.css
+++ b/src/ugd_frontend/assets/main.css
@@ -36,7 +36,27 @@ button[type="submit"] {
 
 
 
+.image-container {
+    /* portrait- I like these greys, but it's maybe a bit plain */
+    background: #8e9eab;
+    background: -webkit-linear-gradient(to top, #eef2f3, #8e9eab);
+    background: linear-gradient(to top, #eef2f3, #8e9eab)
 
+    /* earthly- It's nice but the yellow's too bright, and the green is maybe just too potent or unmatched here.  */
+    /* background: #649173;
+    background: -webkit-linear-gradient(to bottom, #DBD5A4, #649173);
+    background: linear-gradient(to bottom, #DBD5A4, #649173); */
+
+    /* metallic toad - this looks really good, but the white is too bright and plain. */
+    /* background: #abbaab;
+    background: -webkit-linear-gradient(to top, #ffffff, #abbaab);
+    background: linear-gradient(to top, #ffffff, #abbaab); */
+
+    /* sirius tamed - this is realy nice but the yellow's too bright. */
+    /* background: #EFEFBB;
+    background: -webkit-linear-gradient(to bottom, #D4D3DD, #EFEFBB);
+    background: linear-gradient(to bottom, #D4D3DD, #EFEFBB); */
+}
 
 
 
