--- a/src/ugd_frontend/src/styles/sharePage.css
+++ b/src/ugd_frontend/src/styles/sharePage.css
@@ -9,7 +9,7 @@
 }
 
 .shareCardsMainContainer {
-  width: 98%;
+  width: 100%;
   margin: 0px auto;
 }
 
@@ -17,4 +17,15 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-gap: 25px;
+  width: 95%;
+  margin: 0px auto;
+  max-height: 0px;
+  overflow: hidden;
+  transition: 0.5s linear;
+}
+
+.sharedCardsInnerContainer.active {
+  max-height: 4000px;
+  overflow: unset;
+  transition: 0.5s linear;
 }
